ミスのあったymlファイルを修正

--- a/webui_colab.ipynb
+++ b/webui_colab.ipynb
@@ -41,12 +41,11 @@
       "cell_type": "code",
       "execution_count": null,
       "metadata": {
-        "id": "SaAJk33ppFw1",
-        "cellView": "form"
+        "id": "SaAJk33ppFw1"
       },
       "outputs": [],
       "source": [
-        "#@title 起動準備\n",
+        "#@title 起動準備 { form-width: \"100px\" }\n",
         "# aria2(超高速ダウンロードを並列化で実現する仕組み)を導入\n",
         "!apt -y install -qq aria2\n",
         "\n",
@@ -76,13 +75,13 @@
       "source": [
         "#@title webuiの準備\n",
         "# webuiを連れてくる\n",
-        "!git clone -b v2.0 https://github.com/camenduru/stable-diffusion-webui\n",
+        "!git clone https://github.com/AUTOMATIC1111/stable-diffusion-webui\n",
+        "# !git clone -b v2.1 https://github.com/camenduru/stable-diffusion-webui\n",
         "\n",
         "!wget https://raw.githubusercontent.com/camenduru/stable-diffusion-webui-scripts/main/run_n_times.py -O /content/stable-diffusion-webui/scripts/run_n_times.py"
       ],
       "metadata": {
-        "id": "iG5RVHV6kfo-",
-        "cellView": "form"
+        "id": "iG5RVHV6kfo-"
       },
       "execution_count": null,
       "outputs": []
@@ -108,13 +107,12 @@
         "# 日本語化\n",
         "!git clone https://github.com/Katsuyuki-Karasawa/stable-diffusion-webui-localization-ja_JP /content/stable-diffusion-webui/extensions/stable-diffusion-webui-localization-ja_JP\n",
         "!git clone https://github.com/journey-ad/sd-webui-bilingual-localization /content/stable-diffusion-webui/extensions/sd-webui-bilingual-localization\n",
-        "# sdweb-easy-prompt-selector\n",
-        "!git clone https://github.com/blue-pen5805/sdweb-easy-prompt-selector /content/stable-diffusion-webui/extensions/sdweb-easy-prompt-selector\n",
         "# sd-webui-tunnels\n",
         "!git clone https://github.com/camenduru/sd-webui-tunnels /content/stable-diffusion-webui/extensions/sd-webui-tunnels\n",
         "# multidiffusion-upscaler-for-automatic1111\n",
         "!git clone https://github.com/pkuliyi2015/multidiffusion-upscaler-for-automatic1111 /content/stable-diffusion-webui/extensions/sd-webui-tunnels\n",
-        "\n",
+        "# sdweb-easy-prompt-selector\n",
+        "!git clone https://github.com/blue-pen5805/sdweb-easy-prompt-selector /content/stable-diffusion-webui/extensions/sdweb-easy-prompt-selector\n",
         "\n",
         "# EasyNegative\n",
         "!wget -P /content/stable-diffusion-webui/embeddings https://huggingface.co/datasets/gsdf/EasyNegative/resolve/main/EasyNegative.safetensors\n",
@@ -126,7 +124,6 @@
         "!wget -P /content/stable-diffusion-webui/embeddings https://huggingface.co/waifu-diffusion/wd-1-5-beta/resolve/main/embeddings/wdbadprompt.pt\n",
         "# wdgoodprompt.bin\n",
         "!wget -P /content/stable-diffusion-webui/embeddings https://huggingface.co/waifu-diffusion/wd-1-5-beta/resolve/main/embeddings/wdgoodprompt.bin\n",
-        "\n",
         "\n",
         "# 生成完了時に通知音を鳴らすようにする\n",
         "!wget https://otologic.jp/sounds/se/pre/Accent03-1.mp3 -O /content/stable-diffusion-webui/notification.mp3\n",
@@ -145,12 +142,11 @@
     {
       "cell_type": "code",
       "source": [
-        "#@title 背景を詰め合わせたyamlファイルの用意\n",
+        "#@title 簡単にコードを実行できるようにするyamlファイルの用意\n",
         "import yaml\n",
         "\n",
         "# 背景用yamlファイルの内容\n",
-        "yaml_content = '''\n",
-        "背景コレクション50:\n",
+        "yaml_content = '''背景コレクション50:\n",
         "  難破船: (crystal clear water:1.4),(anchor:1.4),(blue sky:1.5),(Shipwrecks:1.4),cumulus,\n",
         "  図書館: (((((messy room))))),((((((gothic room)))))),((dark atmosphere)),(((canopy))),clutter,(((lots of colorful books:1.5))),((Miscellaneous goods are placed in a mess:1.5)),(((colorful sphere))),(((Stained glass:1.3))) ,\n",
         "  お部屋: (in the messy room:1.3),(cute interior:1.5),(pink room),window,kawaii room,canopy,frills,pink chair,(baldachin:1.5),(Foliage plant:1.2),(chesterfield chair:1.5),\n",
@@ -220,28 +216,17 @@
         "with open(file_path, \"w\") as f:\n",
         "    f.write(yaml_content)\n",
         "\n",
-        "print(f\"ファイルを保存しました: {file_path}\")\n"
-      ],
-      "metadata": {
-        "id": "PXpQ8kBxWVFe",
-        "cellView": "form"
-      },
-      "execution_count": null,
-      "outputs": []
-    },
-    {
-      "cell_type": "code",
-      "source": [
-        "#@title ネガティブプロンプトを詰め合わせたyamlファイルの用意\n",
-        "import yaml\n",
+        "print(f\"ファイルを保存しました: {file_path}\")\n",
         "\n",
-        "# 背景用yamlファイルの内容\n",
-        "yaml_content = '''\n",
-        "ネガティブプロンプト:\n",
+        "\n",
+        "\n",
+        "# ネガティブプロンプトを詰め合わせたyamlファイルの内容\n",
+        "yaml_content = '''ネガティブプロンプト:\n",
         "  AOM向けネガティブプロンプト: |\n",
         "    EasyNegative, (worst quality, low quality:1.4), (lip, nose, tooth, rouge, lipstick, eyeshadow:1.4), (blush:1.2), (jpeg artifacts:1.4), (depth of field, bokeh, blurry, film grain, chromatic aberration, lens flare:1.0), (1boy, abs, muscular, rib:1.0), greyscale, monochrome, dusty sunbeams, trembling, motion lines, motion blur, emphasis lines, \n",
         "    BREAK \n",
         "    (text, title, logo, signature:1.1), manga\n",
+        "  R18のムスコの描画改善: (multiple penises, multiple hands, multiple testicles:1.1), masturbation\n",
         "'''\n",
         "\n",
         "# ファイルパス\n",
@@ -257,24 +242,12 @@
         "with open(file_path, \"w\") as f:\n",
         "    f.write(yaml_content)\n",
         "\n",
-        "print(f\"ファイルを保存しました: {file_path}\")\n"
-      ],
-      "metadata": {
-        "id": "IgrIy2H0b_4j",
-        "cellView": "form"
-      },
-      "execution_count": null,
-      "outputs": []
-    },
-    {
-      "cell_type": "code",
-      "source": [
-        "#@title カメラ/ポーズを詰め合わせたyamlファイルの用意\n",
-        "import yaml\n",
+        "print(f\"ファイルを保存しました: {file_path}\")\n",
         "\n",
-        "# 背景用yamlファイルの内容\n",
-        "yaml_content = '''\n",
-        "カメラ:\n",
+        "\n",
+        "\n",
+        "# カメラ/ポーズを詰め合わせたyamlファイルの内容\n",
+        "yaml_content = '''カメラ:\n",
         "  見下ろす: from above\n",
         "  見上げる: from below\n",
         "  斜めから: dutch angle\n",
@@ -344,29 +317,20 @@
         "with open(file_path, \"w\") as f:\n",
         "    f.write(yaml_content)\n",
         "\n",
-        "print(f\"ファイルを保存しました: {file_path}\")\n"
-      ],
-      "metadata": {
-        "cellView": "form",
-        "id": "4ZyianOoxAna"
-      },
-      "execution_count": null,
-      "outputs": []
-    },
-    {
-      "cell_type": "code",
-      "source": [
-        "#@title 個人用プロンプトを詰め合わせたyamlファイルの用意\n",
-        "import yaml\n",
+        "print(f\"ファイルを保存しました: {file_path}\")\n",
         "\n",
-        "# 背景用yamlファイルの内容\n",
-        "yaml_content = '''\n",
-        "服装:\n",
-        "  メイド:(maid:1.2), gothic lolita, crossdressing, detailed dress, detailed maid apron, detailed maid skirt, detailed frills, (rem (re:zero):0.8), hair ornament, gloves\n",
-        "  軍人風:(gothic lolita:1.1), (white shirt:1.3), military blue jacket, military black hat, crossdressing\n",
+        "\n",
+        "\n",
+        "#  個人用プロンプトを詰め合わせたyamlファイルの内容\n",
+        "yaml_content = '''服装:\n",
+        "  メイド: (maid:1.2), gothic lolita, crossdressing, detailed dress, detailed maid apron, detailed maid skirt, detailed frills, (rem (re:zero):0.8), hair ornament, gloves\n",
+        "  軍人風: (gothic lolita:1.1), (white shirt:1.3), military blue jacket, military black hat, crossdressing\n",
         "  サイバーパンク制服: (half-human, half-robot heroine:1.2), (school uniform:1.2), wearing jacket, crossdressing, mechanical headgear\n",
-        "  魔女:witch, large witch hat, black clothes, meidum breasts, fantasy\n",
-        "  研究者の白衣風:(scientist girl wear white labcoat:1.2), white coat, (white gloves:1.1)\n",
+        "  魔女: witch, large witch hat, black clothes, meidum breasts, fantasy\n",
+        "  研究者の白衣風: (scientist girl wear white labcoat:1.2), white coat, (white gloves:1.1)\n",
+        "\n",
+        "クオリティタグ\n",
+        "  簡易まとめ: masterpiece, best quality, high resolution, ultra-detailed, cinematic lighting\n",
         "'''\n",
         "\n",
         "# ファイルパス\n",
@@ -385,8 +349,8 @@
         "print(f\"ファイルを保存しました: {file_path}\")\n"
       ],
       "metadata": {
-        "cellView": "form",
-        "id": "Md7I6IyfxlDz"
+        "id": "PXpQ8kBxWVFe",
+        "cellView": "form"
       },
       "execution_count": null,
       "outputs": []
@@ -496,8 +460,7 @@
         "\"\"\""
       ],
       "metadata": {
-        "id": "wRwDi5yKl6Hp",
-        "cellView": "form"
+        "id": "wRwDi5yKl6Hp"
       },
       "execution_count": null,
       "outputs": []
@@ -505,9 +468,9 @@
     {
       "cell_type": "code",
       "source": [
-        "#@title  起動！</br>(辛抱強く5分位待つと、最後から1つ前の行にPublic WebUI Colab remote.moe URLとしてリンクが表示されるので、それをクリックして下さい。)</br>(閉じるときは、ランタイム→ランタイムを接続解除して削除。)\n",
+        "#@title  最終準備\n",
         "!sed -i -e '''/    prepare_environment()/a\\    os.system\\(f\\\"\"\"sed -i -e ''\\\"s/dict()))/dict())).cuda()/g\\\"'' /content/stable-diffusion-webui/repositories/stable-diffusion-stability-ai/ldm/util.py\"\"\")''' /content/stable-diffusion-webui/launch.py\n",
-        "!sed -i -e 's/fastapi==0.90.1/fastapi==0.89.1/g' /content/stable-diffusion-webui/requirements_versions.txt\n",
+        "!sed -i -e 's/fastapi==0.94.0/fastapi==0.89.1/g' /content/stable-diffusion-webui/requirements_versions.txt\n",
         "\n",
         "# 設定を予め変更する\n",
         "import json\n",
@@ -516,14 +479,23 @@
         "    \"quicksettings\": \"sd_model_checkpoint,sd_vae,CLIP_stop_at_last_layers\"\n",
         "}\n",
         "with open(\"config.json\", \"w\") as f:\n",
-        "    json.dump(config, f)\n",
-        "\n",
-        "# 起動！！！ --no-half-vae\n",
-        "!python launch.py --listen --xformers --enable-insecure-extension-access --gradio-queue --multiple"
+        "    json.dump(config, f)"
       ],
       "metadata": {
-        "id": "3mqUetLEloww",
-        "cellView": "form"
+        "cellView": "form",
+        "id": "RaMzeuWlDtoS"
+      },
+      "execution_count": null,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "#@title  起動！</br>(辛抱強く待つと、最後から1つ前の行にPublic WebUI Colab remote.moe URLとしてリンクが表示されるので、それをクリックして下さい。)</br>(閉じるときは、ランタイム→ランタイムを接続解除して削除。)\n",
+        "!python launch.py --listen --xformers --enable-insecure-extension-access --theme dark --gradio-queue --multiple"
+      ],
+      "metadata": {
+        "id": "3mqUetLEloww"
       },
       "execution_count": null,
       "outputs": []
@@ -776,7 +748,6 @@
       "private_outputs": true,
       "provenance": [],
       "collapsed_sections": [
-        "e-LVQtC_bmVV",
         "pYN3RbwWiPaQ",
         "aWs71gLH3ZUc",
         "dNAZu_-LcSg4",
